2009-02-13  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Fixed drawing issue with
	  current line marker in color styles & syntax modes that
	  define the same bg color than the default one for keywords.

2009-02-12  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/TextViewMargin.cs: Dispose Gdk cursors, else
	  finalisers destroy them outside of the GUI thread and often
	  crash MD due to X asserts resulting in _XCBUnlockDisplay
	  errors.

2009-02-12  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: Worked on
	  ColumnToVisualX.

2009-02-11  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed "Bug 474600 -
	  Completion window's trigger position is wrong at start and
	  end of line".

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/IconMargin.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/TextViewMargin.cs: LineSegment.Markers is
	  now always != null. Removing all unneccessary null checks.

2009-02-09  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs: fixed style text marker.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.csproj: Don't treat warning as errors,
	  because csc still outputs warnings for this project.

2009-02-07  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* Mono.TextEditor.csproj: Fix GTK# version.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Style.cs:
	* Mono.TextEditor.Highlighting/ChunkStyle.cs: fixed "Bug
	  473258 - Current line highlight not correctly drawn".

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: validate
	  now gives back an result.

2009-02-06  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/ChunkStyle.cs: